# smooth-disorder

./: .gitignore  LICENSE  README.md  activate_dl.sh  pyproject.toml  setup_bne.sh  setup_dl.sh  setup_phono3py.sh
docs/: citation.rst  conf.py  index.rst  install.rst  refs.bib
docs/_templates/: base.html
docs/api/: barcode.rst  disorder_linewidth.rst  index.rst  structural.rst  vis.rst
docs/theory/: index.rst
docs/tutorials/: bne.rst  diffusivity.rst  disorder_linewidth.rst  index.rst
docs/tutorials/bne_scripts/: 5_BNE_workflow.rst
docs/workflows/: 1a_BNE_workflow.rst  1b_BNE_plot.rst  2a_DL_workflow_precompute.rst  2b_DL_fit_params.rst  2c_DL_diffusivity_decomposition.rst  config.rst  index.rst
src/smooth_disorder/: __init__.py  barcode.py  disorder_linewidth.py  structural.py
src/smooth_disorder/vis/: __init__.py  (+1 more)
tests/: conftest.py  test_barcode.py  test_bne_workflow.py  test_disorder_linewidth.py  test_pipeline.py  test_structural.py
tutorials/bond_network_entropy/: 1_structure_preparation_and_bonding.ipynb  2_plot_coordination_number_distribution.ipynb  3_H1_barcode.ipynb  4_Bond_Network_Entropy.ipynb  5_BNE_workflow.py  6_BNE_growth_rate.ipynb
tutorials/diffusivity/: 1a_calc_vel_ops.py  2a_convergence_serial.py  2b_save_convergence.py  2c_plot_convergence.py  3a_tensor_conductivity_save.py  3b_tensor_conductivity_save_process.py  3c_launch_serial.py  4a_prepare_inputs_for_dl_fitting.py  POSCAR  activate_phono3py.sh
tutorials/disorder_linewidth/: 1_crystals_and_BTE_vs_disordered_systems.ipynb  2_VDOS_comparison_between_crystal_and_irradiated_graphite.ipynb  3_Debye_model_and_Lorentzian_spectral_functions.ipynb  4_frequency_shift_correction.ipynb  5_disorder_linewidth_and_mean_free_path.ipynb  6_fit_disorder_linewidth_parameters.ipynb  7a_workflow_precompute_quantities.py  7b_fit_dl_parameters.py  7c_diffusivity_decomposition.py
workflows/: 1a_BNE_workflow.py  1b_BNE_plot.py  2a_DL_workflow_precompute.py  2b_DL_fit_params.py  2c_DL_diffusivity_decomposition.py  config.py
workflows/disordered_system/: irg_t9_14009.vasp  irg_t9_diffusivity.hdf5  irg_t9_frequencies.hdf5
workflows/dl_test/: crystal_vdos_group_vel.hdf5  disordered_vdos.hdf5  model_parameters.hdf5  reduced_density_crystal_vdos_group_vel.hdf5
workflows/ref_crystal/: POSCAR
(+119 files in other folders)
